--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   url_launcher: ^6.1.7
   flutter_launch: ^0.3.0
   image_picker: ^0.8.6+1
+  flutter_inappwebview: ^5.7.2+3
+  permission_handler: ^10.2.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
