--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,13 +49,11 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   firebase: ^9.0.3
   firebase_core: ^2.4.0
-  socket_io_client: ^1.0.2
   url_launcher: ^6.1.7
   flutter_launch: ^0.3.0
   image_picker: ^0.8.6+1
-  flutter_inappwebview: ^5.7.2+3
   permission_handler: ^10.2.0
-  dio: ^4.0.6
+  image_cropper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
