--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,7 +62,7 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 3
+        versionCode 6
         versionName "1.0"
     }
 
@@ -75,9 +75,12 @@ android {
        }
    }
    buildTypes {
-       release {
-           signingConfig signingConfigs.release
-       }
+         release {
+            signingConfig signingConfigs.release
+            ndk {
+                abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86_64'
+            }
+        }
    }
 }
 
